# pokemon-rust

./: .gitignore  Cargo.toml  README.md
decisions/: 2026-05-22-frontend-game-loop.md  2026-05-22-game-loop.md  2026-05-22-storage.md  2026-05-22.md
frontend/: Cargo.toml  index.html  wrangler.jsonc
frontend/assets/: manifest.json  sw.js
frontend/assets/audio/music/: battle_gym.m4a  battle_trainer.m4a  battle_wild.m4a  evolution.m4a  pokecenter.m4a  victory_trainer.m4a  victory_wild.m4a
frontend/assets/audio/sfx/: level_up.m4a  pokemon_healed.m4a
frontend/assets/styles/: battle_button.css  battle_layout.css  battle_screen.css  catch_screen.css  damage_number.css  game_over.css  game_page.css  home_page.css  hp_bar.css  pokecenter_screen.css  pokemon_card.css  pokemon_lookup.css  pokemon_select_card.css  post_battle.css  progress_popup.css  shop_screen.css  starter_select.css  style.css  type_badge.css
frontend/src/: main.rs
frontend/src/audio/: context.rs  cries.rs  mod.rs  music.rs  sfx.rs  volume.rs
frontend/src/components/: attack_anim.rs  battle_button.rs  battle_layout.rs  damage_number.rs  hp_bar.rs  mod.rs  pokemon_card.rs  pokemon_select_card.rs  type_badge.rs
frontend/src/components/game/: battle_screen.rs  catch_screen.rs  game_over.rs  mod.rs  pokecenter_screen.rs  post_battle.rs  progress_popup.rs  run_complete.rs  shop_screen.rs  starter_select.rs
frontend/src/core/: api.rs  cache.rs  generator.rs  mod.rs
frontend/src/core/storage/: idb.rs  mod.rs  models.rs
frontend/src/pages/: game.rs  home.rs  mod.rs  ui_kit.rs
game-core/src/: lib.rs  (+5 more)
(+21 files in other folders)
