[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
game-core = { path = "../game-core" }
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
gloo-net = { version = "0.6", features = ["http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rexie = "0.6"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
send_wrapper = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    # Web Audio API
    "AudioContext", "AudioContextState", "AudioContextOptions",
    "AudioNode", "AudioParam", "AudioBuffer", "AudioBufferSourceNode",
    "AudioDestinationNode", "GainNode", "GainOptions",
    "AudioBufferSourceOptions",
    # Fetch + Cache API
    "Request", "RequestInit", "RequestMode", "Response",
    "Cache", "CacheStorage",
    "Window", "WorkerGlobalScope",
    # Events
    "EventTarget", "Event", "HtmlDocument",
    "Document", "VisibilityState",
    "Storage",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

